테스트 코드 GradeQueryServiceTest 에러 수정